# esim

./: .gitignore  README.md  guidance.md  pyproject.toml  python-project-structure.md  structure.md
data/: adder-switching-energy.md  alu-fpu-energy-boxplot.tsx  alu-fpu-latency.md  alu-fpu-switching-energy-v1.md  alu-fpu-switching-energy.md  cuda_research.md  exu_energy.csv  exu_energy.md  exu_energy_old.csv  gpu_energy.csv  gpu_energy_research.md  logic-circuit-energy.md  multiplier-switching-energy.md  old.txt  performance-power-density.md  process_n14.txt  process_n22.txt  process_n7.txt  spm_energy.csv  switching_energies.md
docs/: Performance-data.md  usage.md
energysim/: __init__.py
energysim/core/: blainit.py  data_processor.py
energysim/database/: dfa_energy.py  dfm_energy.py  exu_energy.py  gpu_energy.py  spm_energy.py
energysim/execution/: dfa_metrics.py  dmm_cluster.py  exu_metrics.py  gpu_metrics.py  spm.py  spm_events.py  spm_metrics.py
energysim/linalg/: blainit.py  matrix.py  vector.py
energysim/models/: blainit.py  cache_architecture.md  data_path_design.md  design_category.py  dfa_configuration.py  energy.py  execute_unit.py  exu_configuration.py  gpu_configuration.py  matvec.py  spm.py  spm_configuration.py  user_model.py
energysim/operator/: cuda-flat-matvec.md  cuda-matrix-vector-product.txt  cuda-optimized-matvec.md  flat_matmul.py  flat_matvec.py  matvec.py
energysim/utils/: README.md  blainit.py  logger.py  (+2 more)
notebooks/: README.md  dask_test.ipynb  data-exploration-notebook.py
scripts/: __init__.py
tests/: README.md  __init__.py
(+27 files in other folders)
