[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esim"
version = "0.1.0"
description = "esim: energy simulator for hw/sw co-design energy efficiency optimization"
authors = [
    {name = "Theodore Omtzigt", email = "theo@stillwater-sc.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.22.0",
    "requests>=2.28.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
